--- a/assets/html/starter.html
+++ b/assets/html/starter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <title>Index</title>
+    <title>Starter</title>
     ${require('./partials/head.html')}
     ${require('./partials/starter.html')}
   </head>
@@ -16,6 +16,5 @@
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
     </main>
-    ${require('./partials/footer.html')}
   </body>
 </html>
