--- a/assets/html/404.html
+++ b/assets/html/404.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="d-flex flex-column h-100">
-  ${require('./partials/header.html')}
+  ${require('./partials/navbar.html')}
 
   <main class="d-flex h-100 align-items-center">
     <div class="container">
